Fix cookie line z-index issue #48

--- a/src/main/frontend/styles/main.scss
+++ b/src/main/frontend/styles/main.scss
@@ -342,6 +342,7 @@ html {
 
 .app-cookie-line {
   padding-top: 1em;
+  z-index: 1;
 
   &-button:hover {
     color: currentColor;
